--- a/OREAppNew/Base.lproj/Main.storyboard
+++ b/OREAppNew/Base.lproj/Main.storyboard
@@ -123,17 +123,10 @@
                                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="21" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pUb-zf-2zr">
-                                                <rect key="frame" x="11" y="57" width="90" height="95"/>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="21" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pUb-zf-2zr">
+                                                <rect key="frame" x="11" y="72" width="79" height="80"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="80"/>
-                                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                <nil key="highlightedColor"/>
-                                            </label>
-                                            <label opaque="NO" userInteractionEnabled="NO" alpha="0.5" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="/180" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FlZ-xg-wg4">
-                                                <rect key="frame" x="101" y="115" width="52" height="21"/>
-                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="50"/>
                                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
@@ -145,10 +138,17 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Top 11%" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xUP-Qc-rzp">
-                                                <rect key="frame" x="8" y="181" width="63" height="21"/>
+                                                <rect key="frame" x="8" y="181" width="140" height="21"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <color key="textColor" name="AccentColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" alpha="0.5" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="/180" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FlZ-xg-wg4">
+                                                <rect key="frame" x="90" y="112" width="52" height="21"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                         </subviews>
@@ -251,10 +251,19 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="D4o-ME-SOS"/>
+                    <connections>
+                        <outlet property="homeScreenCurrentRank" destination="pUb-zf-2zr" id="7ei-4u-Qba"/>
+                        <outlet property="homeScreenCurrentStreakDaysLabel" destination="xgi-3N-t16" id="b8h-ss-N2W"/>
+                        <outlet property="homeScreenLevelLabel" destination="gfI-vF-gz6" id="T7X-sW-4nN"/>
+                        <outlet property="homeScreenPointsLabel" destination="guP-Kc-7Tq" id="Dcd-Tw-5hL"/>
+                        <outlet property="homeScreenTopPercentLabel" destination="xUP-Qc-rzp" id="9Ch-5u-9ez"/>
+                        <outlet property="homeScreenTotalPointsLabel" destination="zBp-Fy-EGQ" id="tN2-p9-9De"/>
+                        <outlet property="homeScreenTotalUserLabel" destination="FlZ-xg-wg4" id="xT2-UU-YSA"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4002" y="-351"/>
+            <point key="canvasLocation" x="4067.9389312977096" y="-388.02816901408454"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="1Wb-if-3ca">
