--- a/OREAppNew/Base.lproj/Main.storyboard
+++ b/OREAppNew/Base.lproj/Main.storyboard
@@ -1470,6 +1470,8 @@
                     </navigationItem>
                     <size key="freeformSize" width="393" height="852"/>
                     <connections>
+                        <outlet property="NameLabel" destination="1gk-Ug-7Xc" id="xdl-BP-iln"/>
+                        <outlet property="ProfilePhoto" destination="MNH-30-F81" id="dZN-UH-Q6f"/>
                         <outlet property="currentRankLabel" destination="wSt-dt-1pb" id="sbf-5j-pUF"/>
                         <outlet property="pointsBox" destination="ZKc-mz-Qht" id="NAl-Tz-Ts2"/>
                         <outlet property="pointsLabel" destination="bvv-m4-PxT" id="UA7-dB-d4A"/>
@@ -1497,7 +1499,7 @@
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="John Doe" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6dn-dF-uga">
-                                <rect key="frame" x="141" y="123" width="125" height="50"/>
+                                <rect key="frame" x="141" y="123" width="220" height="50"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="JRM-yI-r2z"/>
                                 </constraints>
@@ -1508,12 +1510,6 @@
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="@DoeNutzz" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xE6-D7-mF9">
                                 <rect key="frame" x="141" y="164" width="87" height="20"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" alpha="0.5" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Pune, MH" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xi9-JO-TSP">
-                                <rect key="frame" x="141" y="187" width="75" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
@@ -1648,7 +1644,6 @@
                             <constraint firstItem="d8e-5P-lht" firstAttribute="top" secondItem="ytE-fB-s7v" secondAttribute="top" constant="448" id="8Oi-Gh-Fny"/>
                             <constraint firstItem="zX7-Py-OR6" firstAttribute="centerY" secondItem="xE6-D7-mF9" secondAttribute="centerY" id="9cr-cF-zbI"/>
                             <constraint firstItem="doH-45-AsT" firstAttribute="top" secondItem="ytE-fB-s7v" secondAttribute="top" constant="390" id="D0z-LP-VJS"/>
-                            <constraint firstItem="xi9-JO-TSP" firstAttribute="top" secondItem="6dn-dF-uga" secondAttribute="bottom" constant="14" id="HJ6-sp-RTw"/>
                             <constraint firstItem="IYi-Js-mOx" firstAttribute="leading" secondItem="n3R-8b-8eo" secondAttribute="leading" id="K9h-42-0qL"/>
                             <constraint firstItem="xE6-D7-mF9" firstAttribute="leading" secondItem="zX7-Py-OR6" secondAttribute="trailing" constant="8" symbolic="YES" id="Ney-Lq-W0n"/>
                             <constraint firstItem="6dV-64-2Uu" firstAttribute="bottom" secondItem="Bpw-aD-3sp" secondAttribute="bottom" id="PJZ-ib-5hk"/>
@@ -1661,7 +1656,6 @@
                             <constraint firstItem="6dV-64-2Uu" firstAttribute="trailing" secondItem="zPO-G4-t7h" secondAttribute="trailing" constant="215" id="XbF-wM-W6b"/>
                             <constraint firstItem="zX7-Py-OR6" firstAttribute="top" secondItem="6dV-64-2Uu" secondAttribute="top" constant="51" id="Ykx-Kb-aHs"/>
                             <constraint firstAttribute="bottom" secondItem="n3R-8b-8eo" secondAttribute="bottom" constant="537" id="bVD-Vc-AeW"/>
-                            <constraint firstItem="xi9-JO-TSP" firstAttribute="leading" secondItem="zX7-Py-OR6" secondAttribute="trailing" constant="8" symbolic="YES" id="btB-e6-q49"/>
                             <constraint firstItem="IYi-Js-mOx" firstAttribute="top" secondItem="d8e-5P-lht" secondAttribute="bottom" constant="17" id="bvQ-lv-V82"/>
                             <constraint firstItem="Bpw-aD-3sp" firstAttribute="leading" secondItem="6dV-64-2Uu" secondAttribute="leading" id="c8K-fm-y5F"/>
                             <constraint firstItem="IYi-Js-mOx" firstAttribute="trailing" secondItem="n3R-8b-8eo" secondAttribute="trailing" id="csM-4G-JIw"/>
@@ -1670,7 +1664,7 @@
                             <constraint firstItem="PJn-vJ-z3f" firstAttribute="width" secondItem="ytE-fB-s7v" secondAttribute="width" multiplier="0.959288" id="grZ-WU-dgx"/>
                             <constraint firstItem="Bpw-aD-3sp" firstAttribute="top" secondItem="ytE-fB-s7v" secondAttribute="top" constant="551" id="i8N-23-gPi"/>
                             <constraint firstItem="6dn-dF-uga" firstAttribute="leading" secondItem="zX7-Py-OR6" secondAttribute="trailing" constant="8" symbolic="YES" id="nCf-b1-YVV"/>
-                            <constraint firstItem="6dV-64-2Uu" firstAttribute="trailing" secondItem="6dn-dF-uga" secondAttribute="trailing" constant="127" id="oPw-M0-eg6"/>
+                            <constraint firstItem="6dV-64-2Uu" firstAttribute="trailing" secondItem="6dn-dF-uga" secondAttribute="trailing" constant="32" id="oPw-M0-eg6"/>
                             <constraint firstItem="IYi-Js-mOx" firstAttribute="top" secondItem="ytE-fB-s7v" secondAttribute="top" constant="504" id="wNj-qR-iDK"/>
                             <constraint firstItem="d8e-5P-lht" firstAttribute="top" secondItem="doH-45-AsT" secondAttribute="bottom" constant="19" id="xCw-7j-bk3"/>
                             <constraint firstItem="IYi-Js-mOx" firstAttribute="leading" secondItem="zPO-G4-t7h" secondAttribute="leading" id="xah-xt-OAC"/>
@@ -1680,6 +1674,12 @@
                         <color key="badgeColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBarItem>
                     <size key="freeformSize" width="393" height="852"/>
+                    <connections>
+                        <outlet property="BackgroundImage" destination="u7I-ol-M6S" id="QwV-lt-F5b"/>
+                        <outlet property="Name" destination="6dn-dF-uga" id="CbV-qU-OoM"/>
+                        <outlet property="ProfilePhoto" destination="zX7-Py-OR6" id="aGh-E4-4Zr"/>
+                        <outlet property="UserName" destination="xE6-D7-mF9" id="fHH-pL-vh0"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="m38-xa-UMp" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -2120,10 +2120,6 @@
                                 <rect key="frame" x="81" y="543" width="18" height="52"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" fixedFrame="YES" image="poweron" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="xbk-66-xQC">
-                                <rect key="frame" x="81" y="638.33333333333337" width="18" height="65"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </imageView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" fixedFrame="YES" image="poweron" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="7kx-ly-LiF">
                                 <rect key="frame" x="81" y="449" width="18" height="52"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -2133,7 +2129,7 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" fixedFrame="YES" image="poweron" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="U83-iW-3CT">
-                                <rect key="frame" x="81" y="247" width="18" height="76"/>
+                                <rect key="frame" x="81" y="236.33333333333337" width="18" height="85"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Level 1" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8hb-Jl-OQx">
@@ -2143,6 +2139,10 @@
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" fixedFrame="YES" image="poweron" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="xbk-66-xQC">
+                                <rect key="frame" x="81" y="641.33333333333337" width="18" height="65"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="rb2-wJ-ayJ"/>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
